# CodeGraphMCPServer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.ja.md  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
References/: system-design.md
docs/: README.md  api.md  configuration.md  examples.md
docs/Qiita/: claude-code-linux-kernel-analysis.md  codegraph-mcp-introduction.md  linux-kernel-analysis-with-codegraph-mcp.md
examples/: README.md  basic_usage.py  mcp_client.py
src/codegraph_mcp/: __init__.py  __main__.py  config.py  server.py
src/codegraph_mcp/core/: __init__.py  community.py  graph.py  graphrag.py  indexer.py  llm.py  parser.py  semantic.py
src/codegraph_mcp/languages/: __init__.py  config.py  cpp.py  csharp.py  go.py  hcl.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py  typescript.py
src/codegraph_mcp/mcp/: __init__.py  prompts.py  resources.py  tools.py
src/codegraph_mcp/storage/: __init__.py  cache.py  sqlite.py  vectors.py
src/codegraph_mcp/utils/: __init__.py  git.py  logging.py
steering/: product.md  structure.md  tech.md
storage/changes/: CHANGE-001-phase3-graphrag-complete.md  CHANGE-002-phase4-progress.md  CHANGE-003-v0.2.0-language-expansion.md  CHANGE-004-v0.3.0-language-expansion.md
storage/specs/: design-adr.md  design-architecture-overview.md  design-core-engine.md  design-mcp-interface.md  design-storage.md  implementation-tasks.md  project-plan.md  requirements-specification.md  validation-report.md
tests/: conftest.py
tests/e2e/: test_scenarios.py
tests/fixtures/python/: calculator.py
tests/integration/: test_graphrag_integration.py  test_server.py
tests/unit/: test_cli.py  test_cpp.py  test_csharp.py  test_go.py  test_graph.py  test_graphrag.py  test_hcl.py  test_indexer.py  test_java.py  test_javascript.py  test_llm.py  test_parser.py  test_php.py  test_prompts.py  test_resources.py  test_ruby.py  test_tools.py
